# MonVisor

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
MD-Files/: Architectural_roadmap.md  ELEVATOR_PITCH.md  ENGINEERING_MAP.md  Engineering_map.md  Monvisor_execution_plan.html  PRODUCT_OVERVIEW.md  PROJECT_STATE.md  Project_state.md
docs/: Architectural_roadmap.docx  Elevator-Pitch.docx  Engineering-Map.docx  Engineering_map.docx  Product-Overview.docx
monvisor/: config.py  recommend.py
monvisor/api/: server.py
monvisor/auth/: base.py  simple.py
monvisor/cli/: generate.py  main.py  nginx.py  report.py  review.py  scan.py  update.py
monvisor/db/: queries.py  schema.py
monvisor/knowledge/v1.0/: corpus.jsonl  manifest.json
monvisor/knowledge/v1.0/exemplars/: alertmanager.yml  alertmanager_full.yml  blackbox_full.yml  docker-compose-full.yml  node_exporter_textfile.prom  prometheus.yml  prometheus_full.yml  rules.yml  rules_full.yml  snmp_full.yml
monvisor/knowledge/v1.0/exemplars/grafana_provisioning/: alerting_contact_points.yml  alerting_notification_policy.yml  dashboard.yml  datasource.yml
monvisor/rag/: embed.py  ingest.py  query.py  store.py
monvisor/web/static/: app.js  style.css
monvisor/web/templates/: base.html  index.html  login.html  report.html
scripts/: build_appimage.sh  build_release_tarball.sh  bundle_corpus.sh  install.py  startup.sh
tests/: test_smoke.py
