[project]
name = "monvisor"
version = "0.1.0"
description = "AI-powered monitoring advisor for Prometheus/Grafana environments"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "James Sparenberg", email = "james@sparenbergs.us" }]
keywords = ["prometheus", "grafana", "monitoring", "rag", "ollama", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-nmap>=0.7",
    "chromadb>=0.5",
    "ollama>=0.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "bcrypt>=4.1",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    "paramiko>=3.4",
]

[project.scripts]
monvisor = "monvisor.cli.main:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["monvisor*"]

[tool.setuptools.package-data]
monvisor = [
    "knowledge/**/*",
    "web/templates/*.html",
    "web/static/*",
]
